Fix example in v1.2.8 Release Notes

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -19,7 +19,7 @@ BBR commands now print the job name in drain logs:
 
 ```
 OLD
-[bbr] XXXX INFO - Copying backup -- 20K uncompressed -- from backup-prepare/XXXX...
+[bbr] XXXX INFO - Copying backup -- 2.6M uncompressed -- from backup-prepare/XXXX...
 
 NEW
 [bbr] XXXX INFO - Copying backup -- 2.6M uncompressed -- for job bbr-usage-servicedb on backup-prepare/XXXX...
