Change duplicate anchor

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -73,7 +73,7 @@ The following diagram shows a sample backup flow.
 <%= image_tag('backup-flow.png') %>
 
 
-## <a id='workflow'></a>What happens when you run a BBR restore?
+## <a id='workflow-restore'></a>What happens when you run a BBR restore?
 
 *Prerequisite:* You have available on the jumpbox an artifact produced by a BBR `backup` of your deployment or director.
 
