--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -8,7 +8,7 @@ Perform the steps below to back up a [BOSH Director](#back-up-director), a [BOSH
 
 To perform a restore, see [Restoring with BOSH Backup and Restore](restore.html).
 
-## <a id='prereqs'></a> Prerequisite
+## <a id='prereqs'></a> Prerequisites
 
 If you want to use the result of the backup to restore to a destination environment,
 verify that the current environment and the destination environment are compatible.
