--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -5,56 +5,72 @@ owner: BBR
 
 This topic describes how to install BOSH Backup and Restore (BBR).
 
-You install the `bbr` binary on a jumpbox, and then run `bbr` from the jumpbox to [back up](backup.html) and [restore](restore.html) your BOSH deployment or BOSH Director.
+To install BBR, you copy the `bbr` executable to a jumpbox. 
 
-##<a id="jumpbox-setup"></a> Step 1: Set Up Your Jumpbox
+Once installed on your jumpbox, you run can run `bbr` from the jumpbox to back up and restore 
+your BOSH deployment or BOSH Director.
 
-Set up your jumpbox with the following settings:
+For more information, see [Backing Up with BOSH Backup and Restore](backup.html) and [Restoring with BOSH Backup and Restore](restore.html).
 
-* The jumpbox must be able to communicate with the network that contains your BOSH deployment.
-* The jumpbox must have sufficient space for the backup. <%= vars.bbr_space %>
-* BBR connects to the VMs at their private IP address, so the jumpbox needs to be in the same network as the deployed VMs. BBR does not support SSH gateways.
-* BBR copies the backed-up data from the VMs to the jumpbox, so ensure you have minimal network latency between them to reduce transfer times.
+##<a id="prerequisites"></a> Prerequisite
+
+You must have a jumpbox before you can install BBR to the jumpbox. A jumpbox is a separate, 
+hardened server on your network that provides a controlled means of access to the VMs other 
+computers on your network.
+
+See the [jumpbox-deployment](https://github.com/cloudfoundry/jumpbox-deployment) GitHub repository for an example jumpbox deployment.
+
+##<a id="jumpbox-setup"></a> Step 1: Configure Your Jumpbox
+
+Configure your jumpbox to meet the following requirements:
+
+* Your jumpbox must be able to communicate with the network that contains your BOSH deployment.
+* Your jumpbox must have sufficient space for the backup. <%= vars.bbr_space %>
+* Your jumpbox must be in the same network as the deployed VMs because BBR connects to the VMs at their private IP addresses. BBR does not support SSH gateways.
+* BBR copies the backed-up data from the VMs to the jumpbox, so you should have minimal network latency between the VMs and the jumpbox to reduce transfer times.
 
 Consult the following table for more information about the network access permissions required by BBR.
 
 <table>
-<tr>
-<th>VM</th>
-<th>Default Port</th>
-<th>Description</th>
-</tr>
-<tr>
-<td>BOSH Director</td>
-<td>25555</td>
-<td>BBR interacts with the BOSH Director API.</td>
-</tr>
-<tr>
-<td>Deployed Instances</td>
-<td>22</td>
-<td>BBR uses SSH to orchestrate the backup on the instances.</td>
-</tr>
-<tr>
-<td>BOSH Director UAA</td>
-<td>8443</td>
-<td>BBR interacts with the UAA API for authentication, if necessary.</td>
-</tr>
+  <tr>
+    <th>VM</th>
+    <th>Default Port</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>BOSH Director</td>
+    <td>25555</td>
+    <td>BBR interacts with the BOSH Director API.</td>
+  </tr>
+  <tr>
+    <td>Deployed Instances</td>
+    <td>22</td>
+    <td>BBR uses SSH to orchestrate the backup on the instances.</td>
+  </tr>
+  <tr>
+    <td>BOSH Director UAA</td>
+    <td>8443</td>
+    <td>BBR interacts with the UAA API for authentication, if necessary.</td>
+  </tr>
 </table>
 
 ## <a id='scp'></a>Step 2: Transfer BBR to Your Jumpbox
 
 Perform the following steps to transfer the `bbr` binary to your jumpbox:
 
-1. Download the [latest BBR release](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases).
-1. Change the permissions of `bbr` in order to make it executable:
+1. Download the latest BBR release from the [bosh-backup-and-restore] (https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases) GitHub repository.
+
+1. Extract the `bbr` binary file from the BBR release.
+
+1. To add executable permissions to the `bbr` binary file, run `chmod a+x bbr`:
 	<pre class="terminal">$ chmod a+x bbr</pre>
-1. SCP the binary to your jumpbox:
-	<pre class="terminal">$ scp LOCAL\_PATH\_TO\_BBR/bbr JUMPBOX\_USER/JUMPBOX\_ADDRESS</pre>
+
+1. To securely copy the `bbr` binary file to your jumpbox, run the following command:
+  `scp LOCAL-PATH-TO-BBR/bbr JUMPBOX-USER/JUMPBOX-ADDRESS`
+    <pre class="terminal">$ scp ~/workspace/bbr admin/jumpbox_server</pre>
 	If your jumpbox has access to the internet, you can also SSH into your jumpbox and use `wget`:
 	<pre class="terminal">
 	$ ssh JUMPBOX\_USER/JUMPBOX\_ADDRESS -i YOUR\_CERTIFICATE.pem
 	$ wget BBR\_RELEASE\_URL
 	$ chmod a+x bbr
 	</pre>
-
-
