Correct heading capitalization [#160556390]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -10,7 +10,7 @@ This guide documents BOSH Backup and Restore (BBR), a framework for backing up a
 BBR orchestrates triggering the backup or restore process on the BOSH deployment or BOSH Director,
 and transfers the backup artifacts to and from the BOSH deployment or BOSH Director.
 
-For more information about installing and using BBR, see the [Installing BOSH Backup and Restore](installing.html), [Backing Up with BOSH Backup and Restore](backup.html), and [Restoring with BOSH Backup and Restore](restore.html) topics. Information for release authors and developers is also available in the [BOSH Backup and Restore Developer's Guide](bbr-devguide.html).
+For more information about installing and using BBR, see the [Installing BOSH Backup and Restore](installing.html), [Backing up with BOSH Backup and Restore](backup.html), and [Restoring with BOSH Backup and Restore](restore.html) topics. Information for release authors and developers is also available in the [BOSH Backup and Restore Developer's Guide](bbr-devguide.html).
 
 For more information about backing up and restoring cf-deployment with BBR, see [Configuring Cloud Foundry for BOSH Backup and Restore](cf-backup.html).
 
