--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -10,7 +10,7 @@ To install BBR, you copy the `bbr` executable to a jumpbox.
 Once installed on your jumpbox, you run can run `bbr` from the jumpbox to back up and restore 
 your BOSH deployment or BOSH Director.
 
-For more information, see [Backing Up with BOSH Backup and Restore](backup.html) and [Restoring with BOSH Backup and Restore](restore.html).
+For more information, see [Backing up with BOSH Backup and Restore](backup.html) and [Restoring with BOSH Backup and Restore](restore.html).
 
 ##<a id="prerequisites"></a> Prerequisite
 
