--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -37,14 +37,13 @@ For resiliency and safety, store your backup buckets and live buckets in differe
 To back up a Cloud Foundry deployment that uses an unversioned S3-compatible external blobstore,
 you must colocate the `s3-unversioned-blobstore-backup-restorer` job from [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/tree/master) as part of your deployment.
 
-1. Verify that your blobstore is one of the following:
-   + Amazon S3 buckets
-   + S3-compatible buckets with support for AWS Signature Version 4.
+1. Verify that your blobstore is either an Amazon S3 bucket or an S3-compatible bucket with support for AWS Signature Version 4.
 
-       <p class="note"><strong>Note</strong>: If your S3-compatible blobstore uses a custom CA certificate, refer to <a href="https://bosh.io/docs/trusted-certs.html">Configuring Trusted Certificates</a> in the <a href="https://bosh.io/docs">BOSH documentation</a>.
-       BBR automatically makes use of your configured trusted certificates.</p>
+    <p class="note"><strong>Note</strong>: If your S3-compatible blobstore uses a custom CA certificate, refer to <a href="https://bosh.io/docs/trusted-certs.html">Configuring Trusted Certificates</a> in the <a href="https://bosh.io/docs">BOSH documentation</a>.
+     BBR automatically makes use of your configured trusted certificates.
+    </p>
 
-1. Create backup buckets for droplets, packages, and buildpacks. We recommend that either the backup buckets or copies of them should be in a different region to the live buckets.
+1. Create backup buckets for droplets, packages, and buildpacks. We recommend that either the backup buckets or copies of them be in a different region than the live buckets.
 
 1. Include the `enable-backup-restore-s3-unversioned.yml` ops file in your deployment.
 
