--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -19,18 +19,18 @@ For information, see [Compatibility of Restore](./restore.html#compatibility).
 
 You can establish a connection to your jumpbox in one of the following ways.
 
-* [SSH](#ssh)
-* [BOSH_ALL_PROXY](#bosh-all-proxy)
+* [Connect with SSH](#ssh)
+* [Connect with BOSH_ALL_PROXY](#bosh-all-proxy)
 
 For general information about the jumpbox, see [Installing BOSH Backup and Restore](installing.html).
 
-### <a id='ssh'></a> SSH
+### <a id='ssh'></a> Connect with SSH
 
 SSH into your jumpbox. If you connect to your jumpbox with SSH, you must run the BBR commands in the following sections from within your jumpbox.
 
-### <a id='bosh-all-proxy'></a> BOSH_ALL_PROXY
+### <a id='bosh-all-proxy'></a> Connect with BOSH_ALL_PROXY
 
-Set the `BOSH_ALL_PROXY` environment variable. Using `BOSH_ALL_PROXY` opens an SSH tunnel with SOCKS5 to the jumpbox. This tunnel allows you to forward requests to the BOSH Director through the jumpbox from your local machine.
+Set and use `BOSH_ALL_PROXY`. Using `BOSH_ALL_PROXY` opens an SSH tunnel with SOCKS5 to the jumpbox. This tunnel allows you to forward requests to the BOSH Director through the jumpbox from your local machine.
 
 Use one of the following methods to create the tunnel:
 
@@ -163,7 +163,7 @@ Use one of the following methods to create the tunnel:
     <p class="note"><strong>Note</strong>: The BBR backup command can take a long time to complete.
     You can run it independently of the SSH session so that the process can continue running even
     if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you can 
-    instead run the command in a <code>screen</code> or <code>tmux</code> session.</p>
+    run the command in a <code>screen</code> or <code>tmux</code> session instead.</p>
 
 1. If the command completes successfully, follow the steps in [What To Do with Your Backup Artifact](#what-to-do-with-artifact) below.
 
