Fix markdown link

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -58,7 +58,8 @@ Consult the following table for more information about the network access permis
 
 Perform the following steps to transfer the `bbr` binary to your jumpbox:
 
-1. Download the latest BBR release from the [bosh-backup-and-restore] (https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases) GitHub repository.
+1. Download the latest BBR release from the
+[bosh-backup-and-restore](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases) GitHub repository.
 
 1. Extract the `bbr` binary file from the BBR release.
 
