--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -7,8 +7,7 @@ This topic describes how to install BOSH Backup and Restore (BBR).
 
 To install BBR, you copy the `bbr` executable to a jumpbox. 
 
-Once installed on your jumpbox, you can run `bbr` from the jumpbox to back up and restore your
-BOSH deployment or BOSH Director.
+Once installed on your jumpbox, you can run `bbr` to back up and restore your BOSH deployment or BOSH Director.
 
 For more information, see [Backing up with BOSH Backup and Restore](backup.html) and [Restoring with BOSH Backup and Restore](restore.html).
 
