--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -66,7 +66,10 @@ Perform the following steps to transfer the `bbr` binary to your jumpbox:
 	<pre class="terminal">$ chmod a+x bbr</pre>
 
 1. To securely copy the `bbr` binary file to your jumpbox, run the following command:
-    `scp LOCAL-PATH-TO-BBR/bbr JUMPBOX-USER/JUMPBOX-ADDRESS`
+
+    ```
+    scp LOCAL-PATH-TO-BBR/bbr JUMPBOX-USER/JUMPBOX-ADDRESS
+    ```
 
     If your jumpbox has access to the internet, you can also SSH into your jumpbox and use `wget`:
     <pre class="terminal">
