--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -34,13 +34,25 @@ Set and use `BOSH_ALL_PROXY`. Using `BOSH_ALL_PROXY` opens an SSH tunnel with SO
 
 Use one of the following methods to create the tunnel:
 
-* **Tunnel created by BOSH CLI**: To provide the BOSH CLI with the SSH credentials it needs to create the tunnel, run the following command: `export BOSH_ALL_PROXY=ssh+socks5://jumpbox@jumpbox-ip:12345?private_key=jumpbox.key`
-<br>
-<br>
+* **Tunnel created by BOSH CLI**: To provide the BOSH CLI with the SSH credentials it needs to create the tunnel, run the following command:
+
+    ```
+	 export BOSH_ALL_PROXY=ssh+socks5://jumpbox@jumpbox-ip:12345?private_key=jumpbox.key
+	 ```
+
 * **Tunnel established separately**:
 
-  1. To establish the tunnel and make it available on a local port, run the following command: `ssh -4 -D 12345 -fNC jumpbox@jumpbox-ip -i jumpbox.key`
-  1. To provide the BOSH CLI with access to the tunnel through use of the `BOSH_ALL_PROXY` environment variable, run the following command: `export BOSH_ALL_PROXY=socks5://localhost:12345`
+  1. To establish the tunnel and make it available on a local port, run the following command:
+
+    ```
+    ssh -4 -D 12345 -fNC jumpbox@jumpbox-ip -i jumpbox.key
+    ```
+	
+  1. To provide the BOSH CLI with access to the tunnel through use of the `BOSH_ALL_PROXY` environment variable, run the following command:
+
+    ```
+    export BOSH_ALL_PROXY=socks5://localhost:12345
+    ```
 
 <p class="note"><strong>Note</strong>: Using <code>BOSH_ALL_PROXY</code> can result in longer
 backup and restore times due to network performance degradation. Because all operations must pass
@@ -50,8 +62,13 @@ through the proxy, moving backup artifacts can be significantly slower.</p>
 
 1. Run the BBR pre-backup check to confirm that your BOSH Director is reachable and can be backed up with BBR:
 
-    <code> bbr director --private-key-path PATH-TO-PRIVATE-KEY --username USER-NAME --host HOST pre-backup-check</code>
-<br><br>
+    ```
+    bbr director \
+    --private-key-path PATH-TO-PRIVATE-KEY \
+    --username USER-NAME \
+    --host HOST \
+    pre-backup-check
+    ```
     Where:
     * `PATH-TO-PRIVATE-KEY` is the path to the SSH private key used to connect to the BOSH Director.
     * `USER-NAME` is the SSH username of the BOSH Director.
@@ -63,11 +80,11 @@ through the proxy, moving backup artifacts can be significantly slower.</p>
 
     <pre class="terminal">
     $ bbr director \
-        --private-key-path bosh.pem \
-        --username vcap \
-        --host bosh.example.com \
-        pre-backup-check
-  </pre>
+    --private-key-path bosh.pem \
+    --username vcap \
+    --host bosh.example.com \
+    pre-backup-check
+    </pre>
 
 1. If the pre-check command fails, do the following:
    * Run the command again adding the `--debug` flag to enable debug logs. 
@@ -77,8 +94,13 @@ through the proxy, moving backup artifacts can be significantly slower.</p>
 
 1. Run the BBR backup command to back up your BOSH Director:
 
-    <code>bbr director --private-key-path PATH-TO-PRIVATE-KEY --username USER-NAME --host HOST backup</code>
-<br><br>
+    ```
+    bbr director \
+    --private-key-path PATH-TO-PRIVATE-KEY \
+    --username USER-NAME \
+    --host HOST \
+    backup
+    ```
     Where:
     * `PATH-TO-PRIVATE-KEY` is the path to the SSH private key used to connect to the BOSH Director.
     * `USER-NAME` is the SSH username of the BOSH Director.
@@ -90,10 +112,10 @@ through the proxy, moving backup artifacts can be significantly slower.</p>
 
     <pre class="terminal">
     $ bbr director \
-      --private-key-path bosh.pem \
-      --username vcap \
-      --host bosh.example.com \
-      backup
+    --private-key-path bosh.pem \
+    --username vcap \
+    --host bosh.example.com \
+    backup
     </pre>
 
 1. If the backup command completes successfully, follow the steps in [Manage Your Backup Artifact](#good-practices) below.
@@ -107,19 +129,26 @@ through the proxy, moving backup artifacts can be significantly slower.</p>
 
 1. Run the BBR pre-backup check to confirm that your BOSH Director is reachable and has a deployment that you can back up with BBR:
 
-    <code>BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET bbr deployment --target BOSH-TARGET --username BOSH-CLIENT --deployment DEPLOYMENT-NAME --ca-cert PATH-TO-BOSH-SERVER-CERT pre-backup-check</code>
-<br><br>
-    Replace the placeholder text with the following:
-    * `BOSH-CLIENT-SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) 
-    as the authentication provider, this is a UAA client secret as the password.<br>
+    ```
+    BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
+    bbr deployment \
+    --target BOSH-TARGET \
+    --username BOSH-CLIENT \
+    --deployment DEPLOYMENT-NAME \
+    --ca-cert PATH-TO-BOSH-SERVER-CERTIFICATE \
+    pre-backup-check
+    ```
+    Replace the placeholder text as follows:
+    * `BOSH-CLIENT-SECRET`: If you have a BOSH Director with User Account and Authentication (UAA)
+    as the authentication provider, this is a UAA client secret as the password.
     If you have a BOSH Director with basic auth configured, this is your password.
     * `BOSH-TARGET`: The FQDN or IP address of your BOSH Director.
-    * `BOSH-CLIENT`: If you have a BOSH Director with User Account and Authentication (UAA) as the 
-    authentication provider, this is a UAA client as the username.<br>
+    * `BOSH-CLIENT`: If you have a BOSH Director with User Account and Authentication (UAA) as the
+    authentication provider, this is a UAA client as the username.
     If you have a BOSH Director with basic auth configured, this is your username.
     * `DEPLOYMENT-NAME`: The name of the deployment you want to back up. For a list of deployments, 
     run `bosh deployments`.
-    * `PATH-TO-BOSH-CA-CERT`: The path to the BOSH Director's Certificate Authority (CA) 
+    * `PATH-TO-BOSH-CA-CERTIFICATE`: The path to the BOSH Director's Certificate Authority (CA)
     certificate, if the certificate is not verifiable by the local machine's certificate chain.
       * If you used [bbl](https://github.com/cloudfoundry/bosh-bootloader), spin up your director 
       to retrieve the CA certificate with `bbl director-ca-cert`.
@@ -147,10 +176,32 @@ through the proxy, moving backup artifacts can be significantly slower.</p>
 
 1. If the pre-backup check succeeds, run the BBR backup command to back up your BOSH deployment:
 
-    <code>BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET nohup bbr deployment --target BOSH-DIRECTOR-IP --username BOSH-CLIENT --deployment DEPLOYMENT-NAME --ca-cert PATH-TO-BOSH-SERVER-CERT backup</code>
-
-    Replace the placeholder values with the same values as above.
-
+    ```
+    BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
+    nohup bbr deployment \
+    --target BOSH-TARGET \
+    --username BOSH-CLIENT \
+    --deployment DEPLOYMENT-NAME \
+    --ca-cert PATH-TO-BOSH-SERVER-CERTIFICATE \
+    backup
+    ```
+    Replace the placeholder text as follows. These are the same values as used in the with the
+    previous command.
+    * `BOSH-CLIENT-SECRET`: If you have a BOSH Director with User Account and Authentication (UAA)
+    as the authentication provider, this is a UAA client secret as the password.
+    If you have a BOSH Director with basic auth configured, this is your password.
+    * `BOSH-TARGET`: The FQDN or IP address of your BOSH Director.
+    * `BOSH-CLIENT`: If you have a BOSH Director with User Account and Authentication (UAA) as the 
+    authentication provider, this is a UAA client as the username.
+    If you have a BOSH Director with basic auth configured, this is your username.
+    * `DEPLOYMENT-NAME`: The name of the deployment you want to back up. For a list of deployments, 
+    run `bosh deployments`.
+    * `PATH-TO-BOSH-CA-CERTIFICATE`: The path to the BOSH Director's Certificate Authority (CA)
+    certificate, if the certificate is not verifiable by the local machine's certificate chain.
+      * If you used [bbl](https://github.com/cloudfoundry/bosh-bootloader), spin up your Director 
+      to retrieve the CA certificate with `bbl director-ca-cert`.
+      * If you manually deployed, then the certificate may be stored in a `secrets.yml` or similar 
+      file.
     <p class="note"><strong>Note</strong>: If you want to include the manifest in the backup artifact, add the  <code>--with-manifest</code> flag. However, be aware that the backup artifact then includes credentials that you need to keep secret.</p>
 
     For example:
@@ -207,19 +258,35 @@ Follow the steps below to use the BBR cleanup script after a failed backup attem
 
 1. If the BOSH Director backup failed, run the following command:
 
-    <code>bbr director --private-key-path PATH-TO-PRIVATE-KEY --username USER-NAME --host HOST backup-cleanup </code>
+    ````
+    bbr director \
+    --private-key-path PATH-TO-PRIVATE-KEY \
+    --username USER-NAME \
+    --host HOST \
+    backup-cleanup
+    ```
+
+    For example:
 
     <pre class="terminal">
     $ bbr director \
     --private-key-path bosh.pem \
     --username vcap \
-    --host bosh.example.com
+    --host bosh.example.com \
     backup-cleanup
     </pre>
 
 1. If the BOSH deployment backup failed, run the following command:
 
-    <code>BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET bbr deployment --target BOSH-TARGET --username BOSH-CLIENT --deployment DEPLOYMENT-NAME --ca-cert PATH-TO-BOSH-CA-CERT backup-cleanup</code>
+    ```
+    BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
+    bbr deployment \
+    --target BOSH-TARGET \
+    --username BOSH-CLIENT \
+	 --deployment DEPLOYMENT-NAME \
+    --ca-cert PATH-TO-BOSH-CA-CERTIFICATE \
+    backup-cleanup
+    ```
 
     For example:
 
