--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -16,45 +16,54 @@ This section is for guidance only, and we recommend that operators validate thei
 
 The restrictions for a backup artifact to be restorable are the following:
 
-+ **Topology**: BBR requires the BOSH topology of a deployment to be the same in the restore environment as it was in the backup environment.
-+ **Naming of instance groups and jobs**: For any deployment that implements the backup and restore scripts, the instance groups and jobs must have the same names.
-+ **Number of instance groups and jobs**: For instance groups and jobs that have backup and restore scripts, there must be the same number of instances.
-+ **Limited validation**: BBR puts the backed up data into the corresponding instance groups and jobs in the restored environment,
-    but cannot validate the restore beyond that.
-    For example, if the MySQL encryption key is different in the restore environment,
-    the BBR restore might succeed although the restored MySQL database is unusable.
++ **Topology**: BBR requires the BOSH topology of a deployment to be the same in the restore
+environment as it was in the backup environment.
++ **Naming of instance groups and jobs**: For any deployment that implements the backup and restore
+scripts, the instance groups and jobs must have the same names.
++ **Number of instance groups and jobs**: For instance groups and jobs that have backup and restore
+scripts, there must be the same number of instances.
++ **Limited validation**: BBR puts the backed up data into the corresponding instance groups and
+jobs in the restored environment, but cannot validate the restore beyond that.
+For example, if the MySQL encryption key is different in the restore environment, the BBR restore
+might succeed although the restored MySQL database is unusable.
 
-<p class="note"><strong>Note</strong>: A change in VM size or underlying hardware should not affect BBR's ability to restore data,
-as long as there is adequate storage space to restore the data. </p>
+<p class="note"><strong>Note</strong>: A change in VM size or underlying hardware should not affect
+BBR's ability to restore data, as long as there is adequate storage space to restore the data.</p>
 
 ## <a id="recreate-vms"></a> Step 1: Recreate VMs
 
-Before restoring a BOSH Deployment or director, you must create the VMs that constitute that deployment/director.
+Before restoring a BOSH deployment or Director, you must create the VMs that constitute that
+deployment or Director.
 
-In a disaster recovery scenario, you can re-create the deployment with your BOSH deployment manifest.
-If you used the `--with-manifest` flag when running the BBR backup command, your backup artifact includes a copy of your manifest.
+In a disaster recovery scenario, you can re-create the deployment with your BOSH deployment
+manifest.
+If you used the `--with-manifest` flag when running the BBR backup command, your backup artifact
+includes a copy of your manifest.
 
-Alternatively, if you are restoring a deployment and you have already restored the director
-which contains knowledge of this deployment, then so long as the [BOSH Resurrector](https://bosh.io/docs/resurrector.html)
-is on, your VMs for the deployment will be brought back by the director.
+Alternatively, if you are restoring a deployment and you have already restored the Director which
+contains knowledge of this deployment, as long as the
+[BOSH Resurrector](https://bosh.io/docs/resurrector.html) is enabled your VMs for the deployment
+will be brought back by the Director.
 
 ## <a id="artifacts-jumpbox"></a> Step 2: Transfer Artifacts to Jumpbox
 
 Move your BBR backup artifact from your safe storage location to the jumpbox.
 
-For instance, you could SCP the backup artifact to your jumpbox:
-  <pre class="terminal">$ scp LOCAL\_PATH\_TO\_BACKUP\_ARTIFACT JUMPBOX\_USER/JUMPBOX\_ADDRESS</pre>
+For instance, you could run the following command to SCP the backup artifact to your jumpbox:
 
-If it is encrypted, decrypt it.
+```
+scp LOCAL-PATH-TO-BACKUP-ARTIFACT JUMPBOX-USER/JUMPBOX-ADDRESS
+```
+
+If this artifact is encrypted, you must decrypt it.
 
 ## <a id='restore'></a> Step 3: Restore
-<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete. You can
-  run it independently of the SSH session so that the process can continue running even if your
-  connection to the jumpbox fails. The command above uses <code>nohup</code>, but you could also run
-   the command in a <code>screen</code> or <code>tmux</code> session.</p>
+<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete.
+You can run it independently of the SSH session so that the process can continue running even if
+your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you run
+the command in a <code>screen</code> or <code>tmux</code> session instead.</p>
 
-   Use the optional `--debug` flag to enable debug logs.
-   See the [Logging](logging.html) topic for more information.
+Use the optional `--debug` flag to enable debug logs. See the [BBR Logging](logging.html) topic for more information.
 
 #### <a id='restore-director'></a> Restore a BOSH Director
 
@@ -62,21 +71,22 @@ Perform the following steps to restore a BOSH Director:
 
 1. Ensure the BOSH Director backup artifact is in the folder you will run BBR from.
 1. Run the BBR restore command from your jumpbox to restore the BOSH Director:
-  <pre class="terminal">
-  $ nohup bbr director \
-      --private-key-path PATH\_TO\_PRIVATE\_KEY \
-      --username USER\_NAME \
-      --host HOST \
-      restore \
-      	--artifact-path PATH\_TO\_DIRECTOR\_BACKUP
-  </pre>
-  Replace the placeholder values as follows:
-    * `PATH_TO_PRIVATE_KEY`: This is the path to the SSH private key used to connect to the BOSH Director.
-    * `USER_NAME`: This is the SSH username of the BOSH Director.
-    * `HOST`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
-	* `PATH_TO_DIRECTOR_BACKUP`: This is the path to the BOSH Director backup you want to restore.
 
-If the command fails, try [these steps](#recovering-from-failing-command)
+    ```
+    nohup bbr director \  
+    --private-key-path PATH-TO-PRIVATE-KEY \
+    --username USER-NAME \
+    --host HOST \
+    restore \
+    --artifact-path PATH-TO-DIRECTOR-BACKUP
+    ```
+    Replace the placeholder values as follows:
+    * `PATH-TO-PRIVATE-KEY`: This is the path to the SSH private key used to connect to the BOSH Director.
+    * `USER-NAME`: This is the SSH username of the BOSH Director.
+    * `HOST`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
+	* `PATH-TO-DIRECTOR-BACKUP`: This is the path to the BOSH Director backup you want to restore.
+
+If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command).
 
 #### <a id='restore-deployment'></a> Restore a BOSH Deployment
 
@@ -84,33 +94,34 @@ Perform the following steps to restore a BOSH deployment:
 
 1. Ensure the BOSH deployment backup artifact is in the folder you will run BBR from.
 1. Run the BBR restore:
-  <pre class="terminal">
-  $ BOSH\_CLIENT\_SECRET=BOSH\_CLIENT\_SECRET \
-      nohup bbr deployment \
-      --target BOSH\_TARGET \
-      --username BOSH\_CLIENT \
-      --deployment DEPLOYMENT\_NAME \
-      --ca-cert PATH\_TO\_BOSH\_SERVER\_CERT \
-      restore \
-      --artifact-path PATH\_TO\_DEPLOYMENT\_BACKUP
-  </pre>
+
+    ```
+    BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
+    nohup bbr deployment \
+    --target BOSH-TARGET \
+    --username BOSH-CLIENT \
+    --deployment DEPLOYMENT-NAME \
+    --ca-cert PATH-TO-BOSH-SERVER-CERTIFICATE \
+    restore \
+    --artifact-path PATH-TO-DEPLOYMENT-BACKUP
+    ```
     Replace the placeholder values as follows:
-    * `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
-    * `BOSH_TARGET`: This is the FQDN or IP address of your BOSH Director.
+    * `BOSH-CLIENT`, `BOSH-CLIENT-SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
+    * `BOSH-TARGET`: This is the FQDN or IP address of your BOSH Director.
     * `DEPLOYMENT-NAME`: This is the name of the deployment you want to restore.
-    * `PATH_TO_BOSH_CA_CERT`: This is the path to the BOSH Director's Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine's certificate chain.
-	* `PATH_TO_DEPLOYMENT_BACKUP`: This is the path to the BOSH deployment backup you want to restore.
+    * `PATH-TO-BOSH-CA-CERTIFICATE`: This is the path to the BOSH Director's Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine's certificate chain.
+	* `PATH-TO-DEPLOYMENT-BACKUP`: This is the path to the BOSH deployment backup you want to restore.
 
-If the command fails, try [these steps](#recovering-from-failing-command)
+If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command).
 
-## <a id="recovering-from-failing-command"></a>Recovering from a failing command
+## <a id="recover-from-failing-command"></a>Recover from a Failing Command
 1. Ensure all the parameters in the command are set.
 1. Ensure the BOSH Director credentials are valid.
 1. Ensure the specified BOSH deployment exists.
 1. Ensure that the jumpbox can reach the BOSH Director.
 1. Ensure the source BOSH deployment is compatible with the target BOSH deployment.
 1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`,
-run the relevant [cleanup command](#manual-clean)
+run the relevant cleanup command. See [Clean up After Failed Restore](#manual-clean).
 
 ## <a id='cancel-restore'></a>Cancel a Restore
 
@@ -126,22 +137,23 @@ If your restore process fails, then the process may leave the BBR restore folder
 In order to resolve these issues, run the BBR cleanup script.
 
 To clean up after a failed BOSH Director restore, run the following command:
-<pre class="terminal">
-$ bbr director \
-    --private-key-path PATH\_TO\_PRIVATE\_KEY \
-    --username USER\_NAME \
-    --host HOST
-    restore-cleanup
-</pre>
+
+```
+bbr director \
+--private-key-path PATH-TO-PRIVATE-KEY \
+--username USER-NAME \
+--host HOST
+restore-cleanup
+```
 
 To clean up after a failed BOSH deployment restore, run the following command:
 
-<pre class="terminal">
-$ BOSH_CLIENT_SECRET=BOSH_CLIENT_SECRET \
-    bbr deployment \
-    --target BOSH_TARGET \
-    --username BOSH_CLIENT \
-    --deployment DEPLOYMENT_NAME \
-    --ca-cert PATH_TO_BOSH_CA_CERT \
-    restore-cleanup
-</pre>
+```
+BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
+bbr deployment \
+--target BOSH-TARGET \
+--username BOSH-CLIENT \
+--deployment DEPLOYMENT-NAME \
+--ca-cert PATH-TO-BOSH-CA-CERTIFICATE \
+restore-cleanup
+```
