--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -35,7 +35,7 @@ For resiliency and safety, store your backup buckets and live buckets in differe
 ### <a id="enable-backup-and-restore-s3-unversioned"></a> Enable Backup and Restore of Your Unversioned S3-Compatible Blobstore
 
 To back up a Cloud Foundry deployment that uses an unversioned S3-compatible external blobstore,
-you must colocate the `s3-unversioned-blobstore-backup-restorer` job from [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/tree/master) as part of your deployment.
+you must colocate the `s3-unversioned-blobstore-backup-restorer` job from the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/tree/master) as part of your deployment.
 
 1. Verify that your blobstore is either an Amazon S3 bucket or an S3-compatible bucket with support for AWS Signature Version 4.
 
